# pg-retest

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  docker-compose.benchmark.yml  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
benches/: README.md  mask_bench.rs  returning_bench.rs  substitute_bench.rs
benches/baselines/: mask_after.txt  mask_before.txt  returning_after.txt  returning_before.txt  substitute_after.txt  substitute_before.txt
demo/: benchmark_workload.py  docker-entrypoint-wal.sh  drift-check.py  generate-workload.sh  init-benchmark.sql  init-db-a.sql  load-driver-phase.py  load-driver.py  pitr-basebackup.sh  pitr-restore.sh  postgres-wal.conf  run_benchmark.sh  stress-test.sh  synthesize-workload.py  synthetic-data-gen.py  variable-load.sh  workload.wkl  write_heavy_benchmark.py
demo/driver-tests/: README.md  docker-compose.yml
demo/replay-toolkit/: README.md  docker-compose.yml
demo/sessions/: analytical-1.sql  analytical-2.sql  bulk-1.sql  mixed-1.sql  mixed-2.sql  transactional-1.sql  transactional-2.sql  transactional-3.sql
docs/: binary-bind-params.md  compare.md  current-state.md  demo.md  golden-path-demo.md  id-correlation.md  production-workflow.md  replay-accuracy.md  replay.md  synthetic-data.md  transform.md  tuning.md  web-dashboard.md
docs/plans/: 2026-03-04-m3-cicd-design.md  2026-03-04-m4-mysql-capture-design.md  2026-03-04-m5-ai-tuning-design.md  2026-03-05-gap-closure-design.md  2026-03-07-m5-ai-tuning-implementation.md  2026-03-19-docker-demo-design.md  2026-03-27-proxy-layer-gap-analysis.md  2026-04-17-sql-parsing-phase-1.md  2026-04-18-sql-parsing-phase-2.md  proxy-layer-best-practices-research.md
src/: cli.rs  lib.rs  main.rs  tls.rs
src/capture/: csv_log.rs  masking.rs  mod.rs  mysql_slow.rs  rds.rs
src/classify/: mod.rs
src/compare/: ab.rs  capacity.rs  junit.rs  mod.rs  report.rs
src/config/: mod.rs
src/correlate/: capture.rs  compile.rs  map.rs  mod.rs  sequence.rs  substitute.rs
src/pipeline/: mod.rs
src/profile/: io.rs  mod.rs
src/proxy/: capture.rs  connection.rs  control.rs  health.rs  listener.rs  metrics.rs  mod.rs  pg_binary.rs  pool.rs  protocol.rs  socket.rs  staging.rs
src/replay/: mod.rs  scaling.rs  session.rs
src/sql/: ast.rs  lex.rs  mod.rs
src/transform/: analyze.rs  engine.rs  mod.rs  mysql_to_pg.rs  plan.rs  planner.rs
src/tuner/: advisor.rs  apply.rs  context.rs  mod.rs  safety.rs  types.rs
src/web/: db.rs  mod.rs  routes.rs  (+2 more)
tests/: ab_test.rs  capture_csv_test.rs  classify_test.rs  compare_test.rs  demo_config_test.rs  id_correlate_test.rs  id_correlation_test.rs  junit_test.rs  masking_test.rs  mysql_integration_test.rs  per_category_scaling_test.rs  pg_query_equivalence.rs  pipeline_test.rs  profile_io_test.rs  proxy_e2e_test.rs  rds_capture_test.rs  replay_e2e_test.rs  replay_test.rs  scale_id_test.sh  scaling_test.rs  sql_lexer_mask_snapshot.rs  sql_lexer_substitute_snapshot.rs  sql_returning_corpus.rs  transform_test.rs  tuner_test.rs  web_test.rs
(+52 files in other folders)
