[package]
name = "pg-retest"
version = "0.2.0"
edition = "2021"
description = "Capture, replay, and compare PostgreSQL workloads"

[dependencies]
anyhow = "1"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
csv = "1"
rmp-serde = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tabled = "0.17"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
