[package]
name = "pg-retest"
version = "1.0.0-rc.3"
edition = "2021"
description = "Capture, replay, and compare PostgreSQL workloads"
license = "Apache-2.0"
repository = "https://github.com/pg-retest/pg-retest"
homepage = "https://github.com/pg-retest/pg-retest"
readme = "README.md"
keywords = ["postgres", "testing", "workload", "benchmarking", "migration"]
categories = ["command-line-utilities", "database"]
authors = ["TheYonk"]

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["ws", "multipart"] }
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
csv = "1"
futures-util = "0.3"
mime_guess = "2"
rand = "0.8"
rmp-serde = "1"
regex = "1"
rust-embed = "8"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tabled = "0.17"
tokio-util = { version = "0.7", features = ["rt"] }
toml = "0.8"
tower-http = { version = "0.6", features = ["fs", "cors"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1"] }
tracing = "0.1"
tempfile = "3"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
tokio-postgres-rustls = "0.13"
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2"
rustls-native-certs = "0.8"
dashmap = "6"
socket2 = { version = "0.5", features = ["all"] }

[dev-dependencies]
tower = { version = "0.5.3", features = ["util"] }
criterion = { version = "0.5", features = ["html_reports"] }
rcgen = "0.13"

[[bench]]
name = "substitute_bench"
harness = false
